Fix field names